# guile-gir

./: AUTHORS  Makefile.am  README  autogen.sh  configure.ac
gir/: Makefile.am  argument.c  argument.h  call.c  call.h  callable.c  callable.h  function.c  function.h  gir.c  gir.scm  object.c  object.h  registered-type.c  registered-type.h  repository.c  repository.h  types.c  types.h
tests/: Makefile.am  call.scm  everything.scm
